# azure-sphere-microchip-spi-eeprom

./: .gitignore  README.md  spi25xx.cpp  spi25xx.h
examples/spi_eeprom/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.cpp
